cluster/apps/security/keycloak/ingressRoute-admin.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-keycloak-admin
  namespace: networking
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`keycloak.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: rfc1918
      #   - name: authentik
      services:
        - name: keycloak
          namespace: security
          port: 80

  # Use the secret generated by cert-manager
  tls:
    secretName: '${SECRET_DOMAIN/./-}-tls'
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
